--- a/sistema/css/style.css
+++ b/sistema/css/style.css
@@ -274,6 +274,9 @@ table td{
 .link_delete{
 	color: #f26b6b;
 }
+.link_add{
+	color: #64b13c;
+}
 .data_delete{
 	text-align: center;
 	margin-top: 40px;
@@ -427,10 +430,21 @@ table td{
 	width: 175px;
 }
 
-
-
-
-
+/* ========================= Lista de productos===================== */
+.center{
+	text-align: center;
+}
+.centerTD, .center{
+	text-align: center;
+}
+.img_producto,img{
+	width: 50px;
+	height: auto;
+	margin: auto;
+}
+.imgProductoDelete{
+	width: 175px;
+}
 
 
 
