--- a/sistema/css/style.css
+++ b/sistema/css/style.css
@@ -445,6 +445,38 @@ table td{
 .imgProductoDelete{
 	width: 175px;
 }
+.modal{
+	position: fixed;
+	width: 100%;
+	height: 100vh;
+	background: rgba(0,0,0,0.81);
+	display: none;
+}
 
+.bodyModal{
+	width: 100%;
+	height: 100%;
+	display: -webkit-inline-flex;
+	display: -moz-inline-flex;
+	display: -ms-inline-flex;
+	display: -o-inline-flex;
+	display: inline-flex;
+	justify-content: center;
+	align-items: center;
+}
+.modal h1 i{
+	font-size: 45pt;
+}
+.modal h1{
+	color: #0E725D;
+	text-transform: uppercase;
+}
+.modal h2{
+	text-transform: uppercase;
+	margin-top: 15px;
+}
 
-
+#form_add_product{
+	width: 420px;
+	text-align: center;
+}
